Added addons functionality

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <script src="JS/app.js" ></script>
     </head>
-    <body style="background-color: beige">
+    <body style="background-color: beige;height:400px;width:500px" >
 
     <div class="container-fluid">
         <div class="row">
